🐛 Fix: scrollbar style

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,36 @@
 @import 'tailwindcss';
 
+@theme {
+  --color-indigo-light: #f0f4f8;
+}
+
 @layer components {
-  .scrollbar {
+  /* .scrollbar {
     @apply [&::-webkit-scrollbar]:w-2.5 [&::-webkit-scrollbar-thumb]:hidden [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-200 hover:[&::-webkit-scrollbar-thumb]:block [&::-webkit-scrollbar-track]:hidden;
-  }
+  } */
   .enable-animation {
     @apply transition-all duration-300;
+  }
+}
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    @apply w-2.5;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    @apply hidden;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply hidden rounded-full bg-purple-200;
+  }
+
+  .scrollbar:hover::-webkit-scrollbar-thumb {
+    @apply block;
+  }
+
+  .scrollbar::-webkit-scrollbar:horizontal {
+    @apply h-2.5;
   }
 }
